--- a/templates/ProjectsHighlights.twig
+++ b/templates/ProjectsHighlights.twig
@@ -1,6 +1,6 @@
 <section id="projects" class="main-bg-dark px-2 rounded-top-5 " style="min-height: 100vh; ">
 
-	{% include 'index/IndexHeader.twig' with {'upRef': 'timeline', 'textRef': 'projects', 'headText': '🕹️Games Gallery', 'darkbg': true} %}
+	{% include 'index/IndexHeader.twig' with {'textRef': textRef, 'headText': headText, 'darkbg': true} %}
 
 	<div class="container row mx-auto main-bg rounded-5 justify-content-center">
 		<div class="col-6 col-md-3 p-3 d-flex justify-content-center">
@@ -15,7 +15,7 @@
 		</div>
 		<div class="col-6 col-md-3 p-3 d-flex justify-content-center">
 			<div class="container-fluid rounded-5 d-flex justify-content-center game-item" style="overflow: hidden; width: 100%; aspect-ratio: 1;" data-src="https://example.com/page1.html">
-				<img src="https://img.itch.zone/aW1nLzE1MDEzOTUwLmpwZw==/180x143%23c/zX75lK.jpg" style="height: 100%; width: auto;" alt="Gallery Image 1">
+				<img src="https://www.masoftcode.com/img/logos/masoftcode.png" style=" width: auto; height: auto;" alt="Gallery Image 1">
 			</div>
 		</div>
 	</div>
