--- a/templates/contact.twig
+++ b/templates/contact.twig
@@ -1,6 +1,6 @@
 {# templates/contact.html.twig #}
 
-{% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': 'Contact 🐼', 'darkbg': false} %}
+{% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': 'Contact 🐼', 'darkbg': true} %}
 
 <form action="{{ path('app_email') }}" method="post">
 	<label for="name">Name:</label><br>
