--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -30,7 +30,7 @@
 					<!-- About Me button -->
 					<button type="button" class="btn btn-primary col" onclick="navigateToSectionAndCloseModal('#aboutme')" data-bs-dismiss="modal">About Me</button>
 					<!-- Timeline button -->
-					<button type="button" class="btn btn-primary col" onclick="navigateToSectionAndCloseModal('#timeline')" data-bs-dismiss="modal">Timeline</button>
+					<button type="button" class="btn btn-primary col" onclick="navigateToSectionAndCloseModal('#timeline')" data-bs-dismiss="modal">CV</button>
 					<!-- Projects button -->
 					<button type="button" class="btn btn-primary col" onclick="navigateToSectionAndCloseModal('#projects')" data-bs-dismiss="modal">Projects</button>
 				</div>
