--- a/templates/index/IndexHeader.twig
+++ b/templates/index/IndexHeader.twig
@@ -1,10 +1,7 @@
 {# templates/contact.html.twig #}
 
-<div class="row justify-content-center {% if darkbg %} bg-dark p-3 rounded-5 border border-light {% endif %}">
-	<a class="col-1" href="#{{ upRef }}" href="#aboutme" style="left: 1rem; position: absolute;">
-		<i class="fa fa-arrow-up" aria-hidden="true"></i>
-	</a>
-	<a class="col-auto" href="#{{ textRef }}">
-		<h2 class="text-center text-capitalize mb-4 white-text">{{ headText }}</h2>
+<div class="row justify-content-center {% if darkbg %} bg-dark rounded-5 border border-light {% endif %}">
+	<a class="col-auto pt-1" href="#{{ textRef }}">
+		<h4 class="text-center text-capitalize mb-4 white-text">{{ headText }}</h4>
 	</a>
 </div>
