--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -10,69 +10,12 @@
 
 {% block body %}
 
-	<style>
-		/* CSS for the typing animation */
-		.typing-effect {
-			overflow: hidden;
-			white-space: wrap;
-			margin: 0 auto;
-		}
+	{% include 'AboutMe.twig' %}
 
-		/* Keyframes for the typing animation */
-		@keyframes typing {
-			from {
-				width: 0;
-			}
-			to {
-				width: 100%;
-			}
-		}
-	</style>
-
-	<section id="aboutme" class="container-fluid d-flex justify-content-center align-items-center" style="height: 100vh;  width: 100%; overflow: hidden;">
-		<img class="mx-auto position-fixed" style="z-index: -1000000; filter: blur(7px) brightness(70%); height: 103%; width: 101%;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
-		<img class="mx-auto position-fixed" style="z-index: -100000; filter: blur(5px); height: 102vh; width: auto;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
-		<div class="container main-bg-dark-translucent rounded-5 border border-light d-flex flex-column justify-content-between justify-content-around" style="min-height: 35vh;">
-			<div class="row mt-md-0 mt-3">
-				<h2 class="typing-effect text-center accent-color">Web & Game Dev</h2>
-			</div>
-			<div class="row mx-md-5 ">
-				<p class="typing-effect white-text text-justify text-lg mb-md-5 mb-3" style="font-size: 14px;">
-					Greetings! Welcome to my corner of the digital universe. I'm Rodolfo León also known as FoundTexas. I'm a passionate computer scientist specialized in 3D Graphics, Project Management and Game Development. I thrive on collaboration and believe that diverse perspectives fuel innovation, leading to significant and innovative experiences across many users.
-				</p>
-			</div>
-		</div>
-	</section>
-
-	<script>
-    window.onload = function () {
-        var elements = document.getElementsByClassName('typing-effect');
-        for (var i = 0; i < elements.length; i++) {
-            typeWriter(elements[i].textContent, elements[i]);
-        }
-    };
-
-    // Function to create the typing effect
-    function typeWriter(text, targetElement) {
-        var speed = 15; // Adjust typing speed here (lower value for faster typing)
-        var i = 0;
-        targetElement.textContent = ""; // Clear existing text
-        function type() {
-            if (i < text.length) {
-                targetElement.textContent += text.charAt(i);
-                i++;
-                setTimeout(type, speed * (text.charAt(i) == ' ' ? 5 : 1));
-            }
-        }
-        type();
-    }
-</script>
-
-
-
+	{% include 'ProjectsHighlights.twig' with {'textRef': 'GamesHighlights', 'headText': 'Games Highlights', 'darkbg': true} %}
+	{% include 'ProjectsHighlights.twig' with {'textRef': 'GameJamsHighlights', 'headText': 'Game Jams Highlights', 'darkbg': true} %}
 	{% include 'timeline.twig' %}
 
-	{% include 'gameGallery.twig' %}
 
 	<section id="contact" class="accent-bg-dark px-3 rounded-top-5" style="min-height: 100vh;  margin-top: -4rem;">
 		{% include 'contact.twig' %}
