--- a/templates/timeline.twig
+++ b/templates/timeline.twig
@@ -1,9 +1,9 @@
-<section id="timeline" class="accent-bg-dark px-2 rounded-top-5" style="height: 100vh; margin-top: -4rem;">
+<section id="timeline" class="accent-bg-dark px-2 rounded-top-5" style="min-height: 100vh; margin-top: -4rem;">
 	{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
-	<div class="container">
-		<div class="row mt-3">
-			<div class="col-5">
-				<h5>Filter by Year:</h5>
+	<div class=" m-md-4">
+		<div class="row m-2">
+			<div class="col-12 col-md mt-2">
+				<h6>Filter by Year:</h6>
 				<div class="btn-group" role="group" aria-label="Year buttons">
 					{% set years = [] %}
 					{% for event in timeline_events %}
@@ -14,8 +14,8 @@
 					{% endfor %}
 				</div>
 			</div>
-			<div class="col-7">
-				<h5>Filter by Tags:</h5>
+			<div class="col-12 col-md mt-2">
+				<h6>Filter by Tags:</h6>
 				{% set all_tags = [] %}
 				{% for event in timeline_events %}
 					{% for tag in event.tags %}
@@ -30,30 +30,32 @@
 				</div>
 				<div class="row">
 					{% for tag in all_tags %}
-						<input type="checkbox" class="btn-check" id="btn-check-outlined-{{ tag }}" name="tags" value="{{ tag }}" checked>
+						<input type="checkbox" class="col-auto btn-check" id="btn-check-outlined-{{ tag }}" name="tags" value="{{ tag }}" checked>
 						<label class="col-auto btn btn-outline-primary" for="btn-check-outlined-{{ tag }}">{{ tag }}</label><br>
 					{% endfor %}
+
 				</div>
 			</div>
 		</div>
-		<div class="row pl-md-4">
+		<div class="row ">
 			{% for year in years %}
-				<div class="events-wrapper" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
-					<h4 class="text-center m-2 m-md-4">{{ year }}</h4>
-					<div style="overflow-y: auto; height: 50vh;">
+				<div class="events-wrapper  mb-5" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
+					<h4 class="text-center py-2 border border-light">{{ year }}</h4>
+					<div class="border border-light" style="overflow-y: auto; overflow-x: hidden; height: 50vh; width: 100%;">
 						{% set events_in_year = timeline_events|filter(e => e.date|date('Y') == year) %}
 						{% for event in events_in_year %}
-							<div class="timeline-event container rounded-4 p-2 bg-dark" data-tags="{{ event.tags|join(',') }}">
-								<div class="row ml-md-3">
-									<h5 class="col-auto p-md-3 accent-color">{{ event.title }}
-										<span class="col main-color">{{ event.date ~ ' - ' ~ event.endDate }}</span>
-									</h5>
-									<div class="list-group px-md-5 col-auto">
-										{% for point in event.description %}
-											<a href="#" class="list-group-item list-group-item-action bg-dark text-light">{{ point }}</a>
-										{% endfor %}
-									</div>
+							<div class="timeline-event border rounded-4 border-light bg-dark mx-auto" data-tags="{{ event.tags|join(',') }}" style="height: 100%;">
+
+								<div class="main-bg row">
+									<h6 class="col-12 col-md accent-color m-2">{{ event.title }}</h6>
+									<span class="col-12 col-md white-text m-2">{{ event.date ~ ' - ' ~ event.endDate }}</span>
 								</div>
+								<div class="col-12 list-group" style="overflow-y: auto; overflow-x: hidden; height: auto; ">
+									{% for point in event.description %}
+										<P style="font-size: 14px;" class="list-group-item list-group-item-action bg-dark text-light">{{ point }}</P>
+									{% endfor %}
+								</div>
+
 								{# Assign tags to the card as a data attribute #}
 								<div class="tags" style="display: none;">{{ event.tags|json_encode|raw }}</div>
 							</div>
