--- a/templates/contact.twig
+++ b/templates/contact.twig
@@ -1,13 +1,16 @@
 {# templates/contact.html.twig #}
 
-{% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': 'Contact 🐼', 'darkbg': true} %}
+<section id="contact" class="accent-bg-dark px-3 rounded-top-5" style="min-height: 100vh;  margin-top: -4rem;">
 
-<form action="{{ path('app_email') }}" method="post">
-	<label for="name">Name:</label><br>
-	<input type="text" id="name" name="name" required><br><br>
-	<label for="email">Email:</label><br>
-	<input type="email" id="email" name="email" required><br><br>
-	<label for="message">Message:</label><br>
-	<textarea id="message" name="message" rows="4" required></textarea><br><br>
-	<button type="submit">Submit</button>
-</form>
+	{% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': 'Contact 🐼', 'darkbg': true} %}
+
+	<form action="{{ path('app_email') }}" method="post">
+		<label for="name">Name:</label><br>
+		<input type="text" id="name" name="name" required><br><br>
+		<label for="email">Email:</label><br>
+		<input type="email" id="email" name="email" required><br><br>
+		<label for="message">Message:</label><br>
+		<textarea id="message" name="message" rows="4" required></textarea><br><br>
+		<button type="submit">Submit</button>
+	</form>
+</section>
