--- a/templates/timeline.twig
+++ b/templates/timeline.twig
@@ -1,4 +1,5 @@
 
+{{ dump(timeline_events) }}
 <section id="timeline" class="accent-bg-dark px-2 rounded-top-5" style="min-height: 100vh; margin-top: -4rem;">
 	{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
 	<div class=" m-md-4">
@@ -8,9 +9,9 @@
 				<div class="btn-group" role="group" aria-label="Year buttons">
 					{% set years = [] %}
 					{% for event in timeline_events %}
-						{% if event.date|date('Y') not in years %}
-							{% set years = years|merge([event.date|date('Y')]) %}
-							<button type="button" class="btn btn-primary" onclick="showEvents('{{ event.date|date('Y') }}')">{{ event.date|date('Y') }}</button>
+						{% if event.startDate|date('Y') not in years %}
+							{% set years = years|merge([event.startDate|date('Y')]) %}
+							<button type="button" class="btn btn-primary" onclick="showEvents('{{ event.startDate|date('Y') }}')">{{ event.startDate|date('Y') }}</button>
 						{% endif %}
 					{% endfor %}
 				</div>
@@ -43,16 +44,16 @@
 				<div class="events-wrapper  mb-5" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
 					<h4 class="text-center py-2 border border-light">{{ year }}</h4>
 					<div class="border border-light" style="overflow-y: auto; overflow-x: hidden; height: 50vh; width: 100%;">
-						{% set events_in_year = timeline_events|filter(e => e.date|date('Y') == year) %}
+						{% set events_in_year = timeline_events|filter(e => e.startDate|date('Y') == year) %}
 						{% for event in events_in_year %}
 							<div class="timeline-event border rounded-4 border-light bg-dark mx-auto" data-tags="{{ event.tags|join(',') }}" style="height: 100%;">
 
 								<div class="main-bg row">
-									<h6 class="col-12 col-md accent-color m-2">{{ event.title }}</h6>
-									<span class="col-12 col-md white-text m-2">{{ event.date ~ ' - ' ~ event.endDate }}</span>
+									<h6 class="col-12 col-md accent-color m-2">{{ event.name }}</h6>
+									<span class="col-12 col-md white-text m-2">{{ event.startDate|date('Y-m') ~ ' - ' ~ event.endDate|date('Y-m') }}</span>
 								</div>
 								<div class="col-12 list-group" style="overflow-y: auto; overflow-x: hidden; height: auto; ">
-									{% for point in event.description %}
+									{% for point in event.bulletpoints %}
 										<P style="font-size: 14px;" class="list-group-item list-group-item-action bg-dark text-light">{{ point }}</P>
 									{% endfor %}
 								</div>
