--- a/templates/mile_stone/index.html.twig
+++ b/templates/mile_stone/index.html.twig
@@ -1,17 +1,28 @@
-{# templates/milestone/new.html.twig #}
-
 {% extends 'base.html.twig' %}
 
-{% block title %}Add New Milestone{% endblock %}
+{% block title %}Add New Milestone
+{% endblock %}
 
-{% block head %}
-		{% endblock %}
+{% block head %}{% endblock %}
 
 {% block body %}
-    <h1>Add New Milestone</h1>
+	<h1>Create Milestone</h1>
 
-    {{ form_start(milestone_form) }}
+	{{ form_start(form) }}
 
-    <button type="submit">Create</button>
-    {{ form_end(milestone_form) }}
+	{{ form_row(form.name) }}
+	{{ form_row(form.description) }}
+	{{ form_row(form.bulletpoints) }}
+	{{ form_row(form.startDate) }}
+	{{ form_row(form.endDate) }}
+
+	<div>
+		<label for="tags">Tags:</label>
+		{% include 'json_input_component.twig' %}
+	</div>
+
+	<button type="submit">Create</button>
+
+	{{ form_end(form) }}
+
 {% endblock %}
