--- a/templates/ProjectsHighlights.twig
+++ b/templates/ProjectsHighlights.twig
@@ -1,4 +1,5 @@
 
+{{ dump(projects) }}
 <section id="projects" class="main-bg-dark px-2 rounded-top-5 " style="min-height: 100vh; ">
 
 	{% include 'index/IndexHeader.twig' with {'textRef': textRef, 'headText': headText, 'darkbg': true} %}
