--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -12,8 +12,8 @@
 	</nav>
 </div>
 
-<button type="button" class="custom-btn position-fixed rounded-4 accent-bg " onclick="playSound('audiopress')" style="z-index: 1050; top: 10px; right: 7px; " data-bs-toggle="modal" data-bs-target="#pauseMenuModal">
-	<i class="fa fa-pause fa-lg my-3 mx-2" style="color: #ffffff; "></i>
+<button type="button" class="custom-btn position-fixed rounded-4 accent-bg " onclick="playSound('audiopress')" style="z-index: 1050; top: 5px; left: 5px; " data-bs-toggle="modal" data-bs-target="#pauseMenuModal">
+	<i class="fa fa-pause fa-lg my-2 mx-2" style="color: #ffffff; "></i>
 </button>
 
 
