--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,21 +10,23 @@
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%30>🐼</text></svg>"> {% block stylesheets %}{% endblock %}
-		
+
 		<!-- googleapis fonts Pixelify+Sans -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+		<link
+		href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
 		<!-- font-awesome -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+		<link
+		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 		<!-- bootstrap -->
 		<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.css">
 		<script src="bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
-		
+
 		<!-- sweetalert2 -->
-		<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet"> 
+		<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.all.min.js"></script>
 
 
@@ -43,7 +45,13 @@
 		{% endblock %}
 
 		{% block head %}
-			{{ include('pausemenu.html.twig') }}
+			{% set buttons = [
+				{ id: '#aboutme', label: 'About Me' },
+				{ id: '#timeline', label: 'CV' },
+				{ id: '#projects', label: 'Projects' }
+			] %}
+			{% include 'pausemenu.html.twig' with {'buttons': buttons} %}
+
 		{% endblock %}
 		{% block body %}{% endblock %}
 	</body>
