--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,4 +39,7 @@
             Sign in
         </button>
     </form>
+
+    <button class="btn btn-lg btn-primary" onclick="window.location.href = 'connect/google' ">google sign in</button>
+
 {% endblock %}
