--- a/templates/ProjectsHighlights.twig
+++ b/templates/ProjectsHighlights.twig
@@ -1,20 +1,18 @@
 
-{{ dump(projects) }}
 <section id="projects" class="main-bg-dark px-2 rounded-top-5 " style="min-height: 100vh; ">
 
 	{% include 'index/IndexHeader.twig' with {'textRef': textRef, 'headText': headText, 'darkbg': true} %}
 
+
 	<div class="container row mx-auto main-bg rounded-5 justify-content-center">
-		<div class="col-6 col-md-3 p-3 d-flex justify-content-center">
-			<div class="container-fluid rounded-5 d-flex justify-content-center game-item" style="overflow: hidden; width: 100%; aspect-ratio: 1;" data-src="https://itch.io/embed-upload/3703497?color=000000">
-				<img src="https://img.itch.zone/aW1nLzE1MDEzOTUwLmpwZw==/180x143%23c/zX75lK.jpg" style="height: 100%; width: auto;" alt="Gallery Image 1">
+		{% for project in projects %}
+			<div class="col-6 col-md-3 p-3 d-flex justify-content-center">
+				<div class="container-fluid rounded-5 d-flex justify-content-center game-item" onclick="window.location.href='{{ path('app_project_detail', {'id': project.id}) }}'" style="overflow: hidden; width: 100%; aspect-ratio: 1;" data-src="https://itch.io/embed-upload/3703497?color=000000">
+					<img src=" {{project.iconref}}" style="height: 100%; width: auto;" alt="Gallery Image 1">
+				</div>
 			</div>
-		</div>
-		<div class="col-6 col-md-3 p-3 d-flex justify-content-center">
-			<div class="container-fluid rounded-5 d-flex justify-content-center game-item" style="overflow: hidden; width: 100%; aspect-ratio: 1;" data-src="https://example.com/page1.html">
-				<img src="https://img.itch.zone/aW1nLzE1MDEzOTUwLmpwZw==/180x143%23c/zX75lK.jpg" style="height: 100%; width: auto;" alt="Gallery Image 1">
-			</div>
-		</div>
+		{% endfor %}
+
 		<div class="col-6 col-md-3 p-3 d-flex justify-content-center">
 			<div class="container-fluid rounded-5 d-flex justify-content-center game-item" style="overflow: hidden; width: 100%; aspect-ratio: 1;" data-src="https://example.com/page1.html">
 				<img src="https://www.masoftcode.com/img/logos/masoftcode.png" style=" width: auto; height: auto;" alt="Gallery Image 1">
@@ -22,39 +20,3 @@
 		</div>
 	</div>
 </section>
-
-<!-- Modal Game -->
-<div class="modal fade" id="gameModal" tabindex="-1" aria-labelledby="gameModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-fullscreen modal-dialog-centered">
-		<div class="modal-content bg-dark">
-			<div class="modal-header accent-bg-dark">
-				<h5 class="modal-title" id="gameModalLabel">Gallery Image</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body d-flex justify-content-center">
-				<iframe id="galleryIframe" frameborder="0" src="" allowfullscreen="true" width="980" height="640"></iframe>
-			</div>
-		</div>
-	</div>
-</div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var gameModal = document.getElementById('gameModal');
-        var galleryIframe = document.getElementById('galleryIframe');
-
-        var galleryItems = document.querySelectorAll('.game-item');
-        galleryItems.forEach(function (item) {
-            item.addEventListener('click', function () {
-                var src = this.getAttribute('data-src');
-                galleryIframe.src = src;
-                var modal = new bootstrap.Modal(gameModal);
-                modal.show();
-            });
-        });
-
-        gameModal.addEventListener('hidden.bs.modal', function () {
-            galleryIframe.src = ''; // Clear iframe source when modal is closed
-        });
-    });
-</script>
