--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<section id="aboutme" class="container-fluid d-flex flex-column justify-content-center align-items-center" style="min-height: 100vh; width: 100%; overflow: hidden;">
+	<section id="register" class="container-fluid d-flex flex-column justify-content-center align-items-center" style="min-height: 100vh; width: 100%; overflow: hidden;">
 		<img class="mx-auto position-fixed" style="z-index: -1000000; filter: blur(7px) brightness(70%); height: 103%; width: 101%;" src="{{ asset('animatedGrid.gif') }}" alt="Other Image"/>
 		<div class="container">
 			{% for flash_error in app.flashes('verify_email_error') %}
@@ -36,7 +36,7 @@
 							</div>
 							{{ form_end(registrationForm) }}
 
-							<button className="btn btn-outline-success" type="submit" onClick={() => { window.location.href = "connect/google" }}> google sign in </button>
+							<button class="btn btn-lg btn-success" onclick="window.location.href='{{ path('connect_google') }}'">google sign in</button>
 						</div>
 					</div>
 				</div>
