--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,8 @@
 		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 		<!-- bootstrap -->
-		<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.css">
-		<script src="bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}">
+		<script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
 
 		<!-- sweetalert2 -->
 		<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css" rel="stylesheet">
