--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -22,6 +22,9 @@
 							<div class="form-group m-2">
 								{{ form_row(registrationForm.email, {'attr': {'class': 'form-control', 'placeholder': 'Email'}}) }}
 							</div>
+							<div class="form-group m-2">
+								{{ form_row(registrationForm.name, {'attr': {'class': 'form-control', 'placeholder': 'Username'}}) }}
+							</div>
 							<div class="form-group m-1">
 								{{ form_row(registrationForm.plainPassword, {'attr': {'class': 'form-control', 'placeholder': 'Password'}}) }}
 							</div>
