--- a/templates/projectDetail.twig
+++ b/templates/projectDetail.twig
@@ -15,105 +15,141 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mb-5">
 
-		<div class="card">
-			<div class="card-header">
+	<hr>
+	<div class="container my-5">
+
+		<div class="card bg-dark">
+			<div class="card-header text-center main-bg-dark ">
 				<h3>{{ project.name }}</h3>
 			</div>
-			<div class="card-body">
-				<p>{{ project.description }}</p>
-				<img src="{{ project.fileref }}" alt="Project Image" class="img-fluid mb-3">
-				<p>Milestone:
-					{{ project.mileStone ? project.mileStone.name : 'no Milestone asociated.' }}</p>
-				<!-- Add icon if available -->
-				{% if project.iconref is not empty %}
-					<img src="{{ project.iconref }}" alt="Project Icon" class="img-fluid" style="max-width: 50px;">
-				{% endif %}
+			<div class="card-body container-fluid bg-dark d-flex justify-content-center align-items-center">
+				<div>
+					{{ project.fileref|raw }}
+				</div>
 			</div>
 		</div>
 
-		<section id="comments container my-4" class="container-fluid" style="height: 80vh; width: 100%; overflow-y: auto;">
-			<div class="card mt-3">
-				<div class="card-header bg-dark">
-					<h4>Comments</h4>
+		<hr>
+
+		<div class="row">
+			<section id="comments container bg-dark" class="col-md-4">
+				<div class="card bg-dark">
+					<div class="card-body bg-dark">
+						<h3>{{ project.name }}</h3>
+						{% if project.iconref is not empty %}
+							<img src="{{ project.iconref }}" alt="Project Icon" class="img-fluid" style="max-width: 50px;">
+						{% endif %}
+						<p>Milestone:
+							{{ project.mileStone ? project.mileStone.name : 'no Milestone asociated.' }}</p>
+					</div>
 				</div>
-				<div class="card-body bg-dark">
-					{% if app.user %}
-						<form class="row" action="{{ path('comment_create', {'projectId': project.id}) }}" method="post">
-							<img class="rounded-circle shadow-1-strong col-auto" src="{% if app.user.avatar is not null %}{{ app.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65"/>
-							<textarea class="col-auto" name="comment" rows="1" required></textarea>
-							<button type="submit" class="btn btn-primary col-auto">Submit</button>
-						</form>
-					{% else %}
-						<p>Please
-							<a href="{{ path('app_login') }}">log in</a>
-							to leave a comment.</p>
-					{% endif %}
+			</section>
 
-					<!-- Display comments -->
-					{% if commentsWithSubcomments %}
-						{% for commentWithSubcomments in commentsWithSubcomments %}
+			<section id="comments container bg-dark" class="col-md-8">
+				<div class="card bg-dark">
+					<div class="card-header bg-dark m-3 text-center">
+						<h4>CoMMENTS</h4>
+					</div>
+					<div class="card-body bg-dark">
+						{% if app.user %}
+							<form action="{{ path('comment_create', {'projectId': project.id}) }}" method="post">
+								<div class="row align-items-center mb-4">
+									<div class="col-auto">
+										<img class="rounded-circle shadow-1-strong" src="{% if app.user.avatar is not null %}{{ app.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65"/>
+									</div>
+									<div class="col">
+										<input type="text" class="form-control" name="comment" placeholder="Add a comment">
+									</div>
+									<div class="col-auto">
+										<button type="submit" class="btn btn-primary">Submit</button>
+									</div>
+								</div>
+							</form>
 
-							<div class="row">
-								<div class="col">
-									<div class="d-flex flex-start">
-										<img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65"/>
-										<div class="flex-grow-1 flex-shrink-1">
+						{% else %}
+							<h5>Please
+								<a href="{{ path('app_login') }}">log in</a>
+								to leave a comment.</h5>
+						{% endif %}
 
-											<div class="d-flex justify-content-between align-items-center">
-												<p class="mb-1">
-													{{ commentWithSubcomments.parentComment.user.name }}
-													<span class="small">-</span>
-												</p>
-											</div>
-											<p class="small mb-0">{{ commentWithSubcomments.parentComment.textdata }}</p>
-											{% if commentWithSubcomments.subComments %}
+						<!-- Display comments -->
+						{% if commentsWithSubcomments %}
+							{% for commentWithSubcomments in commentsWithSubcomments %}
 
-												{% for subComment in commentWithSubcomments.subComments %}
-													<div class="d-flex flex-start mt-4">
-														<a class="me-3" href="#">
-															<img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65"/>
-														</a>
-														<div class="flex-grow-1 flex-shrink-1">
-															<div>
-																<div class="d-flex justify-content-between align-items-center">
-																	<p class="mb-1">
-																		{{ subComment.user.name }}
-																		<span class="small">-
-																		</span>
-																	</p>
-																</div>
-																<p class="small mb-0">
-																	{{ subComment.textdata }}
+
+								<div class="d-flex flex-start my-3">
+									<img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65"/>
+									<div class="flex-grow-1 flex-shrink-1">
+
+										<div class="d-flex justify-content-between align-items-center">
+											<p class="mb-1">
+												{{ commentWithSubcomments.parentComment.user.name }}
+												<span class="small">-</span>
+											</p>
+											<a data-bs-toggle="collapse" href="#collapseComments{{ commentWithSubcomments.parentComment.id }}" aria-expanded="false" aria-controls="collapseComments{{ commentWithSubcomments.parentComment.id }}">
+												<i class="fas fa-reply fa-xs"></i>
+												<span class="small">
+													reply</span>
+											</a>
+										</div>
+
+										<p class="small mb-0">{{ commentWithSubcomments.parentComment.textdata }}</p>
+										{% if commentWithSubcomments.subComments %}
+
+											{% for subComment in commentWithSubcomments.subComments %}
+												<div class="d-flex flex-start my-3">
+													<a class="me-3" href="#">
+														<img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65"/>
+													</a>
+													<div class="flex-grow-1 flex-shrink-1">
+														<div>
+															<div class="d-flex justify-content-between align-items-center">
+																<p class="mb-1">
+																	{{ subComment.user.name }}
+																	<span class="small">-
+																	</span>
 																</p>
 															</div>
+															<p class="small mb-0">
+																{{ subComment.textdata }}
+															</p>
 														</div>
 													</div>
-												{% endfor %}
-
-											{% endif %}
-											<form action="{{ path('comment_create', {'projectId': project.id}) }}" method="post">
-												<div class="form-group mt-3">
-													<input type="text" class="form-control" name="comment" placeholder="Add a subcomment">
 												</div>
+											{% endfor %}
 
-												<input type="hidden" name="parentId" value="{{ commentWithSubcomments.parentComment.id }}">
-												<button type="submit" class="btn btn-sm btn-primary">Submit</button>
+										{% endif %}
+
+										<div class="collapse" id="collapseComments{{ commentWithSubcomments.parentComment.id }}">
+											<form action="{{ path('comment_create', {'projectId': project.id}) }}" method="post" class="mt-3">
+												<div class="row align-items-center">
+													<div class="col-auto">
+														<img class="rounded-circle shadow-1-strong" src="{% if app.user.avatar is not null %}{{ app.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65"/>
+													</div>
+													<div class="col">
+														<input type="text" class="form-control" name="comment" placeholder="Add a comment">
+													</div>
+													<input type="hidden" name="parentId" value="{{ commentWithSubcomments.parentComment.id }}">
+
+													<div class="col-auto">
+														<button type="submit" class="btn btn-primary">Submit</button>
+													</div>
+												</div>
 											</form>
 										</div>
 									</div>
 								</div>
-							</div>
 
-						{% endfor %}
-					{% else %}
-						<p>No comments yet.</p>
-					{% endif %}
 
+							{% endfor %}
+						{% else %}
+							<p>No comments yet.</p>
+						{% endif %}
+
+					</div>
 				</div>
-			</div>
-		</section>
-
+			</section>
+		</div>
 	</div>
 {% endblock %}
