--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,7 +55,7 @@
 		{% endblock %}
 		{% block body %}{% endblock %}
 		{% block foot %}
-			<footer class="bg-dark text-white text-center py-3" style="min-height: 25vh; margin-top: -25vh;">
+			<footer class="bg-dark text-white text-center py-3" style="min-height: 25vh;">
 				<p>&copy; 2024 . All Rights Reserved.</p>
 			</footer>
 		{% endblock %}
