--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -19,44 +19,46 @@
 
 <!-- Modal -->
 <div class="modal fade" id="pauseMenuModal" tabindex="-1" aria-labelledby="pauseMenuModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered modal-lg">
-		<div class="modal-content accent-bg-dark">
-			<div class="modal-header">
-				<h2 class="modal-title text-center" id="pauseMenuModalLabel">Pause Menu</h2>
-				<button type="button" class="btn-close" onclick="playSound('audioback')" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body main-bg" style="overflow-y: auto; height: 50vh; ">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content accent-bg-dark">
+            <div class="modal-header">
+                <h2 class="modal-title text-center" id="pauseMenuModalLabel">Pause Menu</h2>
+                <button type="button" class="btn-close" onclick="playSound('audioback')" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body main-bg" style="overflow-y: auto; height: 50vh; ">
 
-				<div class="row main-bg">
-					{% for button in buttons %}
-						<button type="button" class="btn btn-primary col m-1" onclick="navigateToSectionAndCloseModal('{{ button.id }}')" data-bs-dismiss="modal">{{ button.label }}</button>
-					{% endfor %}
-				</div>
+                <!-- Navigation Buttons -->
+                <div class="row main-bg">
+                    {% for button in buttons %}
+                        <button type="button" class="btn btn-primary col m-1" onclick="navigateToSectionAndCloseModal('{{ button.id }}')" data-bs-dismiss="modal">{{ button.label }}</button>
+                    {% endfor %}
+                </div>
 
-				<!-- Navbar toggle -->
-				<div class="row main-bg">
-					<h5 class="col">Classic NavBar:</h5>
-					<button type="button" class="col-auto btn btn-success" id="collapseOnButton">ON</button>
-					<button type="button" class="col-auto btn btn-danger" id="collapseOffButton">Off</button>
-				</div>
+                <!-- Classic Navbar Toggle -->
+                <div class="row main-bg align-items-center">
+                    <h5 class="col">Classic Navbar:</h5>
+                    <button type="button" class="col-auto btn btn-success" id="collapseOnButton">ON</button>
+                    <button type="button" class="col-auto btn btn-danger" id="collapseOffButton">Off</button>
+                </div>
 
-				<!-- Volume Slider -->
-				<div class="row main-bg">
-					<label for="volumeRange" class="form-label col-auto">Volume:</label>
-					<input type="range" class="form-range col-auto" style="width:100%;" id="volumeRange" min="0" max="1" step="0.01" value="0.25">
-				</div>
+                <!-- Volume Slider -->
+                <div class="row main-bg align-items-center">
+                    <label for="volumeRange" class="form-label col-auto">Volume:</label>
+                    <input type="range" class="form-range col" id="volumeRange" min="0" max="1" step="0.01" value="0.25">
+                    <span class="col-auto" id="volumeValue">25%</span>
+                </div>
 
-			</div>
-			<div class="modal-footer text-center dark-main-bg">
-				{% if app.user %}
-					<p>You are logged in as
-						{{ app.user.userIdentifier }},</p>
-					<a href="{{ path('app_logout') }}">Logout</a>
-				{% endif %}
-			</div>
-		</div>
-	</div>
+            </div>
+            <div class="modal-footer text-center dark-main-bg">
+                {% if app.user %}
+                    <p>You are logged in as {{ app.user.userIdentifier }}</p>
+                    <a href="{{ path('app_logout') }}" class="btn btn-danger">Logout</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 </div>
+
 
 <script>
 	// Function to navigate to section and close the modal
