--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
 		{% block head %}
 			{% set buttons = [
 				{ id: '#aboutme', label: 'About Me' },
-				{ id: '#timeline', label: 'CV' },
+				{ id: 'timeline', label: 'CV' },
 				{ id: '#projects', label: 'Projects' }
 			] %}
 			{% include 'pausemenu.html.twig' with {'buttons': buttons} %}
