--- a/templates/contact.twig
+++ b/templates/contact.twig
@@ -1,6 +1,6 @@
 {# templates/contact.html.twig #}
 
-<section id="contact" class="accent-bg-dark px-3 rounded-top-5" style="min-height: 100vh;  margin-top: -4rem;">
+<section id="contact" class="accent-bg-dark px-3" style="min-height: 100vh;">
 
 	{% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': 'Contact 🐼', 'darkbg': true} %}
 
