--- a/templates/projectDetail.twig
+++ b/templates/projectDetail.twig
@@ -1,157 +1,161 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ project.name }}
+	{{ project.name }}
 {% endblock %}
 
 {% block head %}
-    {% set buttons = [
+	{% set buttons = [
         { id: '#aboutme', label: 'About Me' },
         { id: '#timeline', label: 'CV' },
         { id: '#projects', label: 'Projects' }
     ] %}
-    {% include 'pausemenu.html.twig' with {'buttons': buttons} %}
+	{% include 'pausemenu.html.twig' with {'buttons': buttons} %}
 {% endblock %}
 
 {% block body %}
-<hr>
-    <div class="mx-3">
-        <div class="card bg-dark">
-            <div class="card-header text-center main-bg-dark">
-                <h3>{{ project.name }}</h3>
-            </div>
-            <div class="card-body bg-dark d-flex justify-content-center align-items-center"  style="overflow: hidden;">
-                <div>
-                    {{ project.fileref|raw }}
-                </div>
-            </div>
-        </div>
+	<hr>
+	<div class="mx-3">
+		<div class="card bg-dark">
+			<div class="card-header text-center main-bg-dark">
+				<h3>{{ project.name }}</h3>
+			</div>
+			<div class="card-body bg-dark d-flex justify-content-center align-items-center" style="overflow: hidden;">
+				<div>
+					{{ project.fileref|raw }}
+				</div>
+			</div>
+		</div>
 
-        <hr>
+		<hr>
 
-        <div class="row">
-            <section id="comments container bg-dark" class="col-md-4">
-                <div class="card bg-dark">
-                    <div class="card-body bg-dark">
-                        <h3>{{ project.name }}</h3>
-                        {% if project.iconref is not empty %}
-                            <img src="{{ project.iconref }}" alt="Project Icon" class="img-fluid" style="max-width: 50px;">
-                        {% endif %}
-                        <p>Milestone:
-                            {{ project.mileStone ? project.mileStone.name : 'No milestone associated.' }}</p>
-                    </div>
-                </div>
-            </section>
+		<div class="row">
+			<section id="comments container bg-dark" class="col-md-4">
+				<div class="card bg-dark">
+					<div class="card-body bg-dark">
+						<h3>{{ project.name }}</h3>
+						{% if project.iconref is not empty %}
+							<img src="{{ project.iconref }}" alt="Project Icon" class="img-fluid" style="max-width: 50px;">
+						{% endif %}
+						<p>Milestone:
+							{{ project.mileStone ? project.mileStone.name : 'No milestone associated.' }}</p>
+					</div>
+				</div>
+			</section>
 
-            <div id="comments container bg-dark" class="col-md-8">
-                <div class="card bg-dark">
-                    <div class="card-header bg-dark m-3 text-center">
-                        <h5>COMMENTS</h5>
-                    </div>
-                    <div class="card-body bg-dark">
-                        {% if app.user %}
-                            <form action="{{ path('comment_create', {'projectId': project.id}) }}" method="post">
-                                <div class="row align-items-center mb-4">
-                                    <div class="col-auto">
-                                        <img class="rounded-circle shadow-1-strong" src="{% if app.user.avatar is not null %}{{ app.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="40vw" height="40vw">
-                                    </div>
-                                    <div class="col">
-                                        <input type="text" class="form-control" name="comment" placeholder="Add a comment">
-                                    </div>
-                                    <div class="col-auto">
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                    </div>
-                                </div>
-                            </form>
-                        {% else %}
-                            <p>Please <a href="{{ path('app_login') }}">log in</a> to leave a comment.</p>
-                        {% endif %}
+			<div id="comments container bg-dark" class="col-md-8">
+				<div class="card bg-dark">
+					<div class="card-header bg-dark m-3 text-center">
+						<h5>COMMENTS</h5>
+					</div>
+					<div class="card-body bg-dark">
+						{% if app.user %}
+							<form action="{{ path('comment_create', {'projectId': project.id}) }}" method="post">
+								<div class="row align-items-center mb-4">
+									<div class="col-auto">
+										<img class="rounded-circle shadow-1-strong" src="{% if app.user.avatar is not null %}{{ app.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="40vw" height="40vw">
+									</div>
+									<div class="col">
+										<input type="text" class="form-control" name="comment" placeholder="Add a comment">
+									</div>
+									<div class="col-auto">
+										<button type="submit" class="btn btn-primary">Submit</button>
+									</div>
+								</div>
+							</form>
+						{% else %}
+							<p>Please
+								<a href="{{ path('app_login') }}">log in</a>
+								to leave a comment.</p>
+						{% endif %}
 
-                        <!-- Display comments -->
-                        {% if commentsWithSubcomments %}
-                            {% for commentWithSubcomments in commentsWithSubcomments %}
-                                <div class="d-flex flex-start my-3">
-                                    <img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="40vw" height="40vw">
-                                    <div class="flex-grow-1 flex-shrink-1">
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <p class="mb-1">
-                                                {{ commentWithSubcomments.parentComment.user.name }}
-                                                <span class="small">-</span>
-                                            </p>
-                                            <a data-bs-toggle="collapse" href="#collapseComments{{ commentWithSubcomments.parentComment.id }}" aria-expanded="false" aria-controls="collapseComments{{ commentWithSubcomments.parentComment.id }}">
-                                                <i class="fas fa-reply fa-xs"></i>
-                                                <span class="small">reply</span>
-                                            </a>
-                                        </div>
-                                        <p class="small mb-0">{{ commentWithSubcomments.parentComment.textdata }}</p>
-                                        {% if commentWithSubcomments.subComments %}
-                                            {% for subComment in commentWithSubcomments.subComments %}
-                                                <div class="d-flex flex-start my-3">
-                                                    <a class="me-3" href="#">
-                                                        <img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="40vh" height="40vw">
-                                                    </a>
-                                                    <div class="flex-grow-1 flex-shrink-1">
-                                                        <div>
-                                                            <div class="d-flex justify-content-between align-items-center">
-                                                                <p class="mb-1">
-                                                                    {{ subComment.user.name }}
-                                                                    <span class="small">-</span>
-                                                                </p>
-                                                            </div>
-                                                            <p class="small mb-0">
-                                                                {{ subComment.textdata }}
-                                                            </p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            {% endfor %}
-                                        {% endif %}
-                                        <div class="collapse" id="collapseComments{{ commentWithSubcomments.parentComment.id }}">
-                                            {% if app.user %}
-                                                <form action="{{ path('comment_create', {'projectId': project.id}) }}" method="post" class="mt-3">
-                                                    <div class="row align-items-center">
-                                                        <div class="col-auto">
-                                                            <img class="rounded-circle shadow-1-strong" src="{% if app.user.avatar is not null %}{{ app.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65">
-                                                        </div>
-                                                        <div class="col">
-                                                            <input type="text" class="form-control" name="comment" placeholder="Add a comment">
-                                                        </div>
-                                                        <input type="hidden" name="parentId" value="{{ commentWithSubcomments.parentComment.id }}">
-                                                        <div class="col-auto">
-                                                            <button type="submit" class="btn btn-primary">Submit</button>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            {% else %}
-                                                <h5>Please <a href="{{ path('app_login') }}">log in</a> to leave a comment.</h5>
-                                            {% endif %}
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        {% else %}
-                            <p>No comments yet.</p>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+						<!-- Display comments -->
+						{% if commentsWithSubcomments %}
+							{% for commentWithSubcomments in commentsWithSubcomments %}
+								<div class="d-flex flex-start my-3">
+									<img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="40vw" height="40vw">
+									<div class="flex-grow-1 flex-shrink-1">
+										<div class="d-flex justify-content-between align-items-center">
+											<p class="mb-1">
+												{{ commentWithSubcomments.parentComment.user.name }}
+												<span class="small">-</span>
+											</p>
+											<a data-bs-toggle="collapse" href="#collapseComments{{ commentWithSubcomments.parentComment.id }}" aria-expanded="false" aria-controls="collapseComments{{ commentWithSubcomments.parentComment.id }}">
+												<i class="fas fa-reply fa-xs"></i>
+												<span class="small">reply</span>
+											</a>
+										</div>
+										<p class="small mb-0">{{ commentWithSubcomments.parentComment.textdata }}</p>
+										{% if commentWithSubcomments.subComments %}
+											{% for subComment in commentWithSubcomments.subComments %}
+												<div class="d-flex flex-start my-3">
+													<a class="me-3" href="#">
+														<img class="rounded-circle shadow-1-strong me-3" src="{% if commentWithSubcomments.parentComment.user.avatar is not null %}{{ commentWithSubcomments.parentComment.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="40vh" height="40vw">
+													</a>
+													<div class="flex-grow-1 flex-shrink-1">
+														<div>
+															<div class="d-flex justify-content-between align-items-center">
+																<p class="mb-1">
+																	{{ subComment.user.name }}
+																	<span class="small">-</span>
+																</p>
+															</div>
+															<p class="small mb-0">
+																{{ subComment.textdata }}
+															</p>
+														</div>
+													</div>
+												</div>
+											{% endfor %}
+										{% endif %}
+										<div class="collapse" id="collapseComments{{ commentWithSubcomments.parentComment.id }}">
+											{% if app.user %}
+												<form action="{{ path('comment_create', {'projectId': project.id}) }}" method="post" class="mt-3">
+													<div class="row align-items-center">
+														<div class="col-auto">
+															<img class="rounded-circle shadow-1-strong" src="{% if app.user.avatar is not null %}{{ app.user.avatar }}{% else %}https://t3.ftcdn.net/jpg/05/16/27/58/360_F_516275801_f3Fsp17x6HQK0xQgDQEELoTuERO4SsWV.jpg{% endif %}" alt="avatar" width="65" height="65">
+														</div>
+														<div class="col">
+															<input type="text" class="form-control" name="comment" placeholder="Add a comment">
+														</div>
+														<input type="hidden" name="parentId" value="{{ commentWithSubcomments.parentComment.id }}">
+														<div class="col-auto">
+															<button type="submit" class="btn btn-primary">Submit</button>
+														</div>
+													</div>
+												</form>
+											{% else %}
+												<h5>Please
+													<a href="{{ path('app_login') }}">log in</a>
+													to leave a comment.</h5>
+											{% endif %}
+										</div>
+									</div>
+								</div>
+							{% endfor %}
+						{% else %}
+							<p>No comments yet.</p>
+						{% endif %}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <hr>
+	<hr>
 
 	<footer class="footer bg-dark text-center">
-        <div class="container">
-            <span class="text-muted text-white">Your footer content goes here.</span>
-        </div>
-    </footer>
+		<div class="container">
+			<span class="text-muted text-white">Your footer content goes here.</span>
+		</div>
+	</footer>
 
 {% endblock %}
 
 {% block foote %}
-    <footer class="footer bg-dark text-center">
-        <div class="container">
-            <span class="text-muted">Your footer content goes here.</span>
-        </div>
-    </footer>
+	<footer class="footer bg-dark text-center">
+		<div class="container">
+			<span class="text-muted">Your footer content goes here.</span>
+		</div>
+	</footer>
 {% endblock %}
