--- a/templates/AboutMe.twig
+++ b/templates/AboutMe.twig
@@ -27,16 +27,16 @@
 		<img class="m-2" style="height: 15vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
 	</div>
 	<div class="container m-1 p-2 main-bg-dark-translucent rounded-5 border border-light d-flex flex-column align-items-center justify-content-around" style="min-height: 30%;">
-		<div class="row mt-md-0 mt-md-3">
+		<div class="row mt-md-0 mt-md-3 m-1">
 			<h2 class="p-md-2 typing-effect text-center accent-color">Web & Game Dev</h2>
 		</div>
 		<div class="row mx-md-5 ">
-			<p class="typing-effect white-text text-justify text-lg mb-2" style="font-size: 14px;">
-				Greetings! Welcome to my corner of web. I'm Rodolfo León also known as FoundTexas. I'm a passionate computer scientist specialized in 3D Graphics, Project Management and Game Development. I thrive on collaboration and believe that diverse perspectives fuel innovation, leading to significant and innovative experiences for all users.
+			<p class="typing-effect white-text text-justify text-lg m-1" style="font-size: 14px;">
+				Greetings! Welcome to my corner of the web. I'm Rodolfo also known as FoundTexas. I'm a passionate computer scientist specialized in 3D Graphics, Web and Game Development as well as some Project Management. I thrive on collaboration and believe that diverse perspectives fuel innovation, leading to significant and innovative experiences for all users.
 			</p>
 		</div>
 		<div >
-			<button type="button" class="custom-btn rounded-2 p-1 accent-bg text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">&nbsp;&nbsp;CV&nbsp;&nbsp;</button>
+			<button type="button" class="custom-btn rounded-2 p-1 m-2 accent-bg text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">&nbsp;&nbsp;CV&nbsp;&nbsp;</button>
 		</div>
 	</div>
 </section>
