--- a/templates/index/IndexHeader.twig
+++ b/templates/index/IndexHeader.twig
@@ -2,6 +2,7 @@
 
 <div class="row justify-content-center {% if darkbg %} bg-dark rounded-5 border border-light {% endif %}">
 	<a class="col-auto pt-1" href="#{{ textRef }}">
-		<h4 class="text-center text-capitalize mb-4 white-text">{{ headText }}</h4>
+		<h6 class="text-center text-capitalize mb-4 white-text d-block d-md-none">{{ headText }}</h6>
+		<h4 class="text-center text-capitalize mb-4 white-text d-none d-md-block">{{ headText }}</h4>
 	</a>
 </div>
